--- a/spec/src/main/asciidoc/appI-changelog.adoc
+++ b/spec/src/main/asciidoc/appI-changelog.adoc
@@ -5,9 +5,10 @@
 [appendix]
 == Change Log
 
-=== Changes in Version 3 rev1
+=== Changes in Version 4
 
 * fixed cross-references in the specification document
+* removed deprecated jakarta.xml.bind.Validator
 
 === Changes in Version 3
 
