#134: Remove dependency on java.desktop from the specification
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/spec/src/main/asciidoc/appI-changelog.adoc
+++ b/spec/src/main/asciidoc/appI-changelog.adoc
@@ -8,6 +8,7 @@
 === Changes in Version 3 rev1
 
 * fixed cross-references in the specification document
+* removed constraints on using `java.beans.Introspector`
 
 === Changes in Version 3
 
