#134: Remove dependency on java.desktop from the specification (#192)
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/spec/src/main/asciidoc/appI-changelog.adoc
+++ b/spec/src/main/asciidoc/appI-changelog.adoc
@@ -9,6 +9,7 @@
 
 * fixed cross-references in the specification document
 * removed deprecated jakarta.xml.bind.Validator
+* removed constraints on using `java.beans.Introspector`
 
 === Changes in Version 3
 
