Update the plugins used to generate the spec to their latest versions
Note that the final release of the 2.0.0 plugin has different defaults
and requirements for setting things like the image dir.

The configuration and the documents have been adjusted for that.

Signed-off-by: arjantijms <arjan.tijms@gmail.com>

--- a/spec/src/main/asciidoc/ch01-introduction.adoc
+++ b/spec/src/main/asciidoc/ch01-introduction.adoc
@@ -120,7 +120,7 @@ to check incoming XML documents for validity with respect to the
 schema. +
 
 .Binding XML to Java objects
-image::images/xmlb-2.png[image]
+image::xmlb-2.png[image]
 
 To sum up: Schemas describe the structure and
 meaning of an XML document, in much the same way that a class describes
