Update the plugins used to generate the spec to their latest versions
Note that the final release of the 2.0.0 plugin has different defaults
and requirements for setting things like the image dir.

The configuration and the documents have been adjusted for that.

Signed-off-by: arjantijms <arjan.tijms@gmail.com>

--- a/spec/src/main/asciidoc/appH-binary_data.adoc
+++ b/spec/src/main/asciidoc/appH-binary_data.adoc
@@ -243,5 +243,5 @@ schema customization @attachmentRef of <jaxb:property>, specified in
 
 .JAXB marshal/unmarshalling of optimized binary content.
 [[opbin]]
-image::images/xmlb-23.svg[image]
+image::xmlb-23.png[image]
 
