--- a/spec/src/main/asciidoc/ch05-java_representation.adoc
+++ b/spec/src/main/asciidoc/ch05-java_representation.adoc
@@ -873,7 +873,7 @@ illustrate the binding changes for the following schema fragment:
 ----
 
 .JAXB 1.0: isA Relationship between generated element interface and its type
-image::images/xmlb-9.png[image]
+image::images/xmlb-9.svg[image]
 
 .Jakarta XML Binding: hasA Relationship between element instance and its type as described in <<Named Java Element instance>>
 image::images/xmlb-10.png[image]
