--- a/spec/src/main/asciidoc/appI-changelog.adoc
+++ b/spec/src/main/asciidoc/appI-changelog.adoc
@@ -14,6 +14,8 @@
 through `jaxb.properties` file, `jakarta.xml.bind.context.factory` and
 `jakarta.xml.bind.JAXBContext` properties and `/META-INF/services/jakarta.xml.bind.JAXBContext`
 resource file
+* added Jakarta XML Binding implementation lookup through the properties `Map`
+passed to `JAXBContext.newInstance` methods
 * dropped requirement on compatibility with JAXB 1.0
 
 === Changes in Version 3
