--- a/spec/src/main/asciidoc/ch08-java_types.adoc
+++ b/spec/src/main/asciidoc/ch08-java_types.adoc
@@ -215,7 +215,7 @@ vice versa. It is the value type that is used for marshalling and
 unmarshalling. Use of this approach involves two steps:
 
 * provide an adapter class that extends the
-abstract class `@jakarta.xml.bind.annotation.adapters.XmlAdapter` that
+abstract class `jakarta.xml.bind.annotation.adapters.XmlAdapter` that
 defines two methods `unmarshal()` and `marshal()`. The methods are
 invoked by JAXB vendor implementation during unmarshalling and
 marshaling respectively to adapt between bound and value types.
