--- a/api/src/main/resources/jakarta/xml/bind/Messages.properties
+++ b/api/src/main/resources/jakarta/xml/bind/Messages.properties
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2003, 2021 Oracle and/or its affiliates. All rights reserved.
+# Copyright (c) 2003, 2024 Oracle and/or its affiliates. All rights reserved.
 #
 # This program and the accompanying materials are made available under the
 # terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -16,7 +16,7 @@ ContextFinder.DefaultProviderNotFound = \
 	Implementation of Jakarta XML Binding-API has not been found on module path or classpath.
 	
 ContextFinder.CouldNotInstantiate = \
-	Provider {0} could not be instantiated: {1}	
+	Provider {0} could not be instantiated: {1}
 
 ContextFinder.CantFindPropertiesFile = \
 	Unable to locate jaxb.properties for package {0}
@@ -31,7 +31,7 @@ ContextFinder.NoPackageInContextPath = \
     No package name is given
 
 ContextFinder.ErrorLoadClass = \
-    Error loading class {0} listed in {1}, make sure that entries are accessable \
+    Error loading class {0} listed in {1}, make sure that entries are accessible \
     on CLASSPATH and of the form ClassName or OuterClass.InnerClass \
     not ClassName.class or fully.qualified.ClassName
 
@@ -42,7 +42,7 @@ DatatypeConverter.ConverterMustNotBeNull = \
 	The DatatypeConverterInterface parameter must not be null
 	
 JAXBContext.IllegalCast = \
-    ClassCastException: attempting to cast {0} to {1}.  Please make sure that you are specifying the proper ClassLoader.    
+    ClassCastException: attempting to cast {0} to {1}.  Please make sure that you are specifying the proper ClassLoader.
 
 JAXBClasses.notOpen = \
     Package {0} with Jakarta XML Binding class {1} defined in a module {2} must be open to at least jakarta.xml.bind module.
