--- a/spec/src/main/asciidoc/ch08-java_types.adoc
+++ b/spec/src/main/asciidoc/ch08-java_types.adoc
@@ -1426,7 +1426,7 @@ public class Foo {
 
 [source,java,indent=4]
 ----
-@Retention(RUNTIME) @Target({FIELD, METHOD}
+@Retention(RUNTIME) @Target({FIELD, METHOD})
 public @interface XmlElement {
     String name() default "##default"; // name for XML element
     boolean nillable() default false;
@@ -1687,7 +1687,7 @@ then that single particle. Otherwise mapped as specified in <<a3042>>
 
 [source,java,indent=4]
 ----
-@Retention(RUNTIME) @Target({FIELD, METHOD}
+@Retention(RUNTIME) @Target({FIELD, METHOD})
 public @interface XmlElementRef {
     String name() default "##default"; // name for XML element
     String namespace() default "##default";
@@ -1842,7 +1842,7 @@ then the particle obtained by mapping as specified in <<xmlanyelement>>
 
 [source,java,indent=4]
 ----
-@Retention(RUNTIME) @Target({FIELD, METHOD}
+@Retention(RUNTIME) @Target({FIELD, METHOD})
 public @interface XmlElementWrapper {
     String name() default "##default" ; // name for XML element
     String namespace() default "##default";
